Corregir acceso a elemento en lista de aulas en VacanteService